Start card reader lib